--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -120,13 +120,19 @@
   <data name="cancelled" xml:space="preserve">
     <value>Cancelled</value>
   </data>
+  <data name="clear_recent_caption" xml:space="preserve">
+    <value>Clear the list of recent projects?</value>
+  </data>
+  <data name="clear_recent_text" xml:space="preserve">
+    <value>Are you sure you want to clear the list of recent projects?
+You cannot undo this operation.</value>
+  </data>
   <data name="closed_project_caption" xml:space="preserve">
     <value>Closing a modified project</value>
   </data>
   <data name="closed_project_text" xml:space="preserve">
     <value>You are about to close a project with unsaved modifications.
-Do you want to save these modifications before closing the project?
-You may also press Cancel to not close the project.</value>
+Do you want to save these modifications before closing the project?</value>
   </data>
   <data name="debug_created_project" xml:space="preserve">
     <value>[DEBUG] Created project</value>
@@ -135,10 +141,18 @@ You may also press Cancel to not close the project.</value>
     <value>[DEBUG] Opened project from XUK file {0}</value>
   </data>
   <data name="debug_saved_project" xml:space="preserve">
-    <value>[DEBUG] Saved project</value>
+    <value>[DEBUG] Saved project to XUK file {0}</value>
   </data>
   <data name="debug_touched_project" xml:space="preserve">
     <value>[DEBUG] Touched project</value>
+  </data>
+  <data name="discard_changes_caption" xml:space="preserve">
+    <value>Discarding changes to a modified project</value>
+  </data>
+  <data name="discard_changes_text" xml:space="preserve">
+    <value>Do you really want to discard all modifications made to this
+project and revert it to its last saved state?
+You cannot undo this operation.</value>
   </data>
   <data name="new_strip_label" xml:space="preserve">
     <value>New strip</value>
@@ -154,6 +168,15 @@ You may also press Cancel to not close the project.</value>
   </data>
   <data name="resize_strip" xml:space="preserve">
     <value>resize strip</value>
+  </data>
+  <data name="save_settings_error_caption" xml:space="preserve">
+    <value>Could not save settings</value>
+  </data>
+  <data name="save_settings_error_text" xml:space="preserve">
+    <value>The following error occurred while trying to save the settings:
+"{0}"
+As a result, changes to the settings made during this session have not been saved.
+Oh well.</value>
   </data>
   <data name="undo_label" xml:space="preserve">
     <value>{0} {1}</value>
