--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="add_child_command_label" xml:space="preserve">
+    <value>add sub-section</value>
+  </data>
   <data name="cancelled" xml:space="preserve">
     <value>Cancelled</value>
   </data>
