--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -227,8 +227,14 @@ Do you want to replace the project contained in this file?</value>
   <data name="add_section_command_label" xml:space="preserve">
     <value>add section</value>
   </data>
+  <data name="delete_section_command_label" xml:space="preserve">
+    <value>delete section</value>
+  </data>
   <data name="redo" xml:space="preserve">
     <value>&amp;Redo</value>
+  </data>
+  <data name="rename_command_label" xml:space="preserve">
+    <value>rename node</value>
   </data>
   <data name="undo" xml:space="preserve">
     <value>&amp;Undo</value>
