Disabled missing Command (Commands/TOC/IncreaseSectionLevel.cs) Updated Play dialog. Need to remove references to "assets" in the menu (replace with audio blocks)

--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -258,4 +258,12 @@ Do you want to replace the project contained in this file?</value>
     <value>Could not find channel named "{0}".</value>
     <comment>Channel not found exception (JQ)</comment>
   </data>
+  <data name="pause" xml:space="preserve">
+    <value>&amp;Pause</value>
+    <comment>Pause button label (JQ)</comment>
+  </data>
+  <data name="play" xml:space="preserve">
+    <value>&amp;Play</value>
+    <comment>Play button label (JQ)</comment>
+  </data>
 </root>
